Demon Guide: Bodyconian and Man Eater

--- a/index.html
+++ b/index.html
@@ -355,7 +355,9 @@
                 <div class="DG-Demon"><br>
                   <strong>[20/1]</strong>
                   <ul>
-                    <li>Added writeups for: Beelzebub, Ganesha, Kinmamon</li>
+                    <li>3/4★ Gacha Demons: Man Eater, Bodyconian writeup</li>
+                    <li>4★ Fusable Demons: Beelzebub, Ganesha writeup</li>
+                    <li>Other Demons: Kinmamon writeup</li>
                   </ul>
                   <strong>[19/1]</strong>
                   <ul>
@@ -366,7 +368,7 @@
                   <strong>[16/1]</strong>
                   <ul>
                     <li>Added Latest Updates collapsible</li>
-                    <li>Added Masakado writeup (and placeholder image)</li>
+                    <li>Added Masakado writeup</li>
                   </ul>
                 </div>
                   
@@ -443,7 +445,7 @@
                   <table class="DG-ToC" id="DG-NotableDemons"><tbody>
                     <tr><td class="DG-Table-Label" colspan="9">Notable Demons </td></tr>
                     <tr>
-                      <td class="DG-Table-Label">Gacha (WIP)</td>
+                      <td class="DG-Table-Label">Gacha</td>
                       <td><a href="#Chernobog" onclick="openCollapsibleViaToC('Chernobog')"><img src="images/devil/Chernobog.png"><br>Chernobog</a></td>
                       <td><a href="#Hel" onclick="openCollapsibleViaToC('Hel')"><img src="images/devil/Hel.jpg"><br>Hel</a></td>
                       <td><a href="#Hell Biker" onclick="openCollapsibleViaToC('Hell Biker')"><img src="images/devil/Hell-Biker.png"><br>Hell Biker</a></td>
@@ -454,7 +456,7 @@
                       <td><a href="#Bodyconian" onclick="openCollapsibleViaToC('Bodyconian')"><img src="images/devil/Bodyconian.png"><br>Bodyconian</a></td>
                     </tr>
                     <tr>
-                      <td class="DG-Table-Label" rowspan = "2">4★ (WIP)</td>
+                      <td class="DG-Table-Label" rowspan = "2">4★</td>
                       <td><a href="#Beelzebub" onclick="openCollapsibleViaToC('Beelzebub')"><img src="images/devil/maou_beruzebubu.png"><br>Beelzebub</a></td>
                       <td><a href="#Fenrir" onclick="openCollapsibleViaToC('Fenrir')"><img src="images/devil/youjyuu_huenriru.png"><br>Fenrir</a></td>
                       <td><a href="#Ganesha" onclick="openCollapsibleViaToC('Ganesha')"><img src="images/devil/youma_ganesya.png"><br>Ganesha</a></td>
@@ -3027,39 +3029,42 @@
                 <button id="Man Eater" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Man Eater</button>
                 <div class="DG-Demon"><br>
                   <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Man Eater')">Demon Information</a></strong></p>
-                  <p>
+                  <p>Phys support oriented demon with resist elec, repel dark and weakness to light. She has quite low hp/vit/mag, decent agi, decent str and high luck.
+                    With this stat spread she can take advantage of her kit's Eat whole for damage, Sexy dance for ailment infliction and Sass (Passive: when foe is charmed, cast Rakunda) adding 
+                    onto charm's already deadly effect. Due to Sass you can pair her with demons like Lakshmi, Mother Harlot for a free debuff when they charm their foes. She herself is also a source 
+                    of charm and so can work without them.
                   </p>
 
                   <div class="DG-Table">
                     <p><table>
                       <tbody>
                           <tr><td class="DG-CMN">Common</td>
-                            <td><strong></strong></td>
-                            <td></td>
+                            <td>She's not a magic unit and so <strong>Deathtouch</strong> wouldn't do much for her</td>
+                            <td>Unobtainable</td>
                           </tr>
                           <tr><td class="DG-ARA">Aragami</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td><strong>Bleeder</strong> gives you a support phys skill. In comparison to Mind Break, it's stronger and has the ability to crit but inversely can miss and has a smaller effect.
+                              <br><strong>Berserker</strong> increases her damage, also taking more damage in return. Pretty bad for her since she's squishy in the first place and you'd want her alive for her Sass to activate.
                             </td>
-                            <td></td>
+                            <td>Usable</td>
                           </tr>
                           <tr><td class="DG-PRO">Protector</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td><strong>Binding Claw</strong> would be quite spammable for her (4mp when awakened), with her high luck she'd be able to easily inflict bind.
+                              <br>This goes greatly with <strong>Deadly Bondage</strong> for extra damage against bound foes.
                             </td>
-                            <td></td>
+                            <td><strong>Best<br>(Phys Support)</strong></td>
                           </tr>
                           <tr><td class="DG-PSY">Psychic</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td>Losing her mind with <strong>Insanity</strong>, grants her extra ailment infliction. Great in boosting up her Sexy Dance and whichever other ailments you want to transfer to her.
+                              <br><strong>Retaliate</strong>, on the other hand relies on her being hit in the first place. Not that great due to her low bulk.
                             </td>
-                            <td></td>
+                            <td><strong>Best<br>(Pure Ailment)</strong></td>
                           </tr>
                           <tr><td class="DG-ELE">Elementalist</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td>With <strong>Repel Elec</strong> and her natural Repel Dark, she can block both Thor and Black Frost's piercing when paired with Alilat (Quite niche but Repel Elec is hard to find on a demon).
+                              <br>Her gacha skill will cover her weakness and so <strong>Resist Light</strong> would be nice to keep for pve content or any hard hitting light units like Mastema, Metatron, Michael.
                             </td>
-                            <td><strong></strong></td>
+                            <td>Usable</td>
                           </tr>
                       </tbody>
                     </table></p>
@@ -3067,9 +3072,12 @@
 
                   <p><strong>Recommended skills:</strong></p>
                   <ul>
-                    <li></li>
+                    <li>Resist Light. Shield her from the light, covering her weakness.</li>
+                    <li>Madness. If you want to stack up her ailment infliction rate</li>
+                    <li>Any other ailment. Gives her more ailment related coverage</li>
+                    <li>Phys Boost/Good Aim. If you want to use her as a phys unit she can be built as one</li>
                   </ul>
-                  <p><strong>Brands: </strong></p>
+                  <p><strong>Brands: </strong> Divine can allow turn one Sexy Dance in pvp, her skills are pretty cheap anyways so Life for survival would work, War for phys damage.</p>
                   <p><a href="#DG-NotableDemons"><img class="DG-HomeButton" src="images/theme/HomeButton.png"></a></p>
                 </div>
                 
@@ -3077,39 +3085,41 @@
                 <button id="Bodyconian" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Bodyconian</button>
                 <div class="DG-Demon"><br>
                   <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Bodyconian')">Demon Information</a></strong></p>
-                  <p>
+                  <p> Our first gacha 3★ unit in the game. She has two weaknesses (fire and light), resists dark at least and has all round pretty bad stats (besides luck and agi).
+                    Bodyconian knows Madness, Sexy Dance and lives the Nightlife (Passive: Increases Macca earned). With this kit she'll spam charm to no end (which makes her pair well with Man Eater).
+                    In comparison to Kanbari, he has a much higher macca earn boost + boosts experience earned as well. In levelling quests, it'd not be worth it sacrificing another slot for her, she can fit into your secondary team in AG for extra macca at least.
                   </p>
 
                   <div class="DG-Table">
                     <p><table>
                       <tbody>
                           <tr><td class="DG-CMN">Common</td>
-                            <td><strong></strong></td>
-                            <td></td>
+                            <td><strong>Luck Amp II</strong> boosts her luck up a bit. This is like having another Madness tacked on with the added evasion, accuracy, ailment resist.</td>
+                            <td>Unobtainable</td>
                           </tr>
                           <tr><td class="DG-ARA">Aragami</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td><strong>Sweet Bite</strong> would be used for inflicting charm moreso compared to damage, compared to Sexy Dance it can miss but then again can crit, saving you a press turn icon.
+                              <br><strong>Good Aim</strong> helps bolster up her hit rate for it which is nice.
                             </td>
-                            <td></td>
+                            <td>Usable</td>
                           </tr>
                           <tr><td class="DG-PRO">Protector</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td>Along with alluring others with her Sexy Dance, she is capable of <strong>Taunt</strong>ing your foes. In general this is a pretty bad skill, though is spammable at 2mp.
+                              <br><strong>Lydia</strong> adds to her support kit nicely. Useful when paired with the more tanky party members.
                             </td>
-                            <td></td>
+                            <td>Bad</td>
                           </tr>
                           <tr><td class="DG-PSY">Psychic</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td><strong>Evade</strong> greatly ramps up her evasion towards phys attacks. You'd still have to worry about her magic defense plus her two weaknesses.
+                              <br>Being the life of the party she's able to <strong>Wild Guess</strong> the oncoming advances of foes. A bad skill in general and so is recommended to be replaced.
                             </td>
-                            <td></td>
+                            <td><strong>Best<br>(Survival)</strong></td>
                           </tr>
                           <tr><td class="DG-ELE">Elementalist</td>
-                            <td><strong></strong>
-                              <br><strong></strong>
+                            <td>One of her weaknesses is covered via <strong>Resist Light</strong>, cover the other with Resist Fire and you don't have to worry about giving foes an extra press turn.
+                              <br>Able to get over late nights partying quickly, <strong>Fast Recovery</strong> could be useful but in general it's always better to just increase resistance/have barrier rather than rely on RNG for ailment curing.
                             </td>
-                            <td><strong></strong></td>
+                            <td><strong>Best<br>(Versatility)</strong></td>
                           </tr>
                       </tbody>
                     </table></p>
@@ -3117,9 +3127,11 @@
 
                   <p><strong>Recommended skills:</strong></p>
                   <ul>
-                    <li></li>
+                    <li>Resist Fire/Light. Covering weakness is always nice.</li>
+                    <li>Any ailment. Adds onto her support role.</li>
+                    <li>Barrier Break. Removes barriers to allow her to then follow up with ailments</li>
                   </ul>
-                  <p><strong>Brands: </strong></p>
+                  <p><strong>Brands: </strong>Life would ensure she stays up longer. Divine if you feel like giving her something more expensive to cast.</p>
                   <p><a href="#DG-NotableDemons"><img class="DG-HomeButton" src="images/theme/HomeButton.png"></a></p>
                 </div>
                 </div>
