Demon Guide: Updated Yatagarasu

--- a/index.html
+++ b/index.html
@@ -3742,7 +3742,7 @@
                             <td><strong>Best<br>(Offensive)</strong></td>
                           </tr>
                           <tr><td class="DG-ARA">Aragami</td>
-                            <td>If you don't have a HB/ZG team and want to use him as a phys unit, <strong>Oni-Kagura</strong> is excellent for single targeting. 
+                            <td>If you don't have a HB/ZG team and want to use him as a phys unit, <strong>Mortal Jihad</strong> is excellent for single targeting. 
                               <br>Given guaranteed crit from Red Zone, the added crit from this isn't required for HB/ZG teams.
                             </td>
                             <td>Usable</td>
@@ -3767,7 +3767,7 @@
 
                   <p><strong>Recommended skills:</strong></p>
                   <ul>
-                    <li>Single Target Phys. For HB/ZG teams for when you run across Repel Phys + Alilat.</li>
+                    <li>Single Target Phys (E.g. Fatal Sword, Berserker God). For HB/ZG teams for when you run across Repel Phys + Alilat.</li>
                     <li>Debuff/Buff. For Support build</li>
                     <li>Barrier Break. Support build, if you want to use him in an ailment team</li>
                   </ul>
