Demon Guide: Masakado update

--- a/index.html
+++ b/index.html
@@ -1216,6 +1216,8 @@
                        base kit. Vorpal Blade for phys aoe, Warlord's Wrath: Granting phys pierce, 100% phys counter and Intimidating Stance all in one passive and Occult Flash: Single 
                        target phys damage with 50% crit, 200 power and 100% kill rate. Yup even if you have Tetraja on your demon, odds are they'll die anyways from the heavy damage and crit (even has three uses). 
                        Since he's a intimidating stance user, it's best to pair him up with another stance user. I'd recommend Zhong Kui due to his Auto-Taruka having a huge benefit for the both of them.
+                       <br> One interesting thing is that counter can be prevented if the unit is bound (credit to itzmeAkA on Reddit). 
+                            Against Masakado himself, you can then safeguard your phys units through bind (be wary of his ailment resistance however).
                     </p>
 
                     <div class="DG-Table">
