--- a/index.html
+++ b/index.html
@@ -440,11 +440,11 @@
                       <td><a href="#Siegfried" onclick="openCollapsibleViaToC('Siegfried')"><img src="images/devil/eiyuu_jikuhurito.png"><br>Siegfried</a></td>
                       <td><a href="#Yoshitsune" onclick="openCollapsibleViaToC('Yoshitsune')"><img src="images/devil/eiyuu_yositune.png"><br>Yoshitsune</a></td>
                       <!-- Reaper-->
-                      <td><a href="#Ixtab" onclick="openCollapsibleViaToC('Ixtab')"><img src="images/devil/Ixtab.jpg"><br>Ixtab</a></td>
-                      <td><a href="#Mot" onclick="openCollapsibleViaToC('Mot')"><img src="images/devil/Mot.jpg"><br>Mot</a></li>
+                      <td><a href="#Ixtab" onclick="openCollapsibleViaToC('Ixtab')"><img src="images/devil/Ixtab.png"><br>Ixtab</a></td>
+                      <td><a href="#Mot" onclick="openCollapsibleViaToC('Mot')"><img src="images/devil/Mot.png"><br>Mot</a></li>
                     </tr><tr>
-                      <td><a href="#Nergal" onclick="openCollapsibleViaToC('Nergal')"><img src="images/devil/Nergal.jpg"><br>Nergal</a></td>
-                      <td><a href="#Orcus" onclick="openCollapsibleViaToC('Orcus')"><img src="images/devil/Orcus.jpg"><br>Orcus</a></td>
+                      <td><a href="#Nergal" onclick="openCollapsibleViaToC('Nergal')"><img src="images/devil/Nergal.png"><br>Nergal</a></td>
+                      <td><a href="#Orcus" onclick="openCollapsibleViaToC('Orcus')"><img src="images/devil/Orcus.png"><br>Orcus</a></td>
                       <!-- General -->
                       <td><a href="#Masakado" onclick="openCollapsibleViaToC('Masakado')"><img src="images/devil/Masakado.png"><br>Masakado</a></td>
                     </tr>
@@ -491,10 +491,10 @@
                     <tr>
                       <td class="DG-Table-Label">Gacha</td>
                       <td><a href="#Chernobog" onclick="openCollapsibleViaToC('Chernobog')"><img src="images/devil/Chernobog.png"><br>Chernobog</a></td>
-                      <td><a href="#Hel" onclick="openCollapsibleViaToC('Hel')"><img src="images/devil/Hel.jpg"><br>Hel</a></td>
+                      <td><a href="#Hel" onclick="openCollapsibleViaToC('Hel')"><img src="images/devil/Hel.png"><br>Hel</a></td>
                       <td><a href="#Hell Biker" onclick="openCollapsibleViaToC('Hell Biker')"><img src="images/devil/Hell-Biker.png"><br>Hell Biker</a></td>
                       <td><a href="#Jeanne D Arc" onclick="openCollapsibleViaToC('Jeanne D Arc')"><img src="images/devil/eiyuu_jannu.png"><br>Jeanne D'Arc</a></td>
-                      <td><a href="#Persephone" onclick="openCollapsibleViaToC('Persephone')"><img src="images/devil/Persephone.jpg"><br>Persephone</a></td>
+                      <td><a href="#Persephone" onclick="openCollapsibleViaToC('Persephone')"><img src="images/devil/Persephone.png"><br>Persephone</a></td>
                       <td><a href="#White Rider" onclick="openCollapsibleViaToC('White Rider')"><img src="images/devil/majin_waitonaito.png"><br>White Rider</a></td>
                       <td><a href="#Man Eater" onclick="openCollapsibleViaToC('Man Eater')"><img src="images/devil/ManEater.png"><br>Man Eater</a></td>
                       <td><a href="#Bodyconian" onclick="openCollapsibleViaToC('Bodyconian')"><img src="images/devil/Bodyconian.png"><br>Bodyconian</a></td>
