--- a/indexBeta.html
+++ b/indexBeta.html
@@ -877,8 +877,8 @@
 
         gtag('config', 'UA-71606599-2');
     </script>
-        <a href="index.html">Go back to Stable Release!</a>
-    Formula Problems? Contact <a href="mailto:myh10232223@yahoo.com">putty174</a>
+    <a href="index.html">Go back to Stable Release!</a>
+    Problems? Contact putty174 on Discord(#5147) <a href="mailto:myh10232223@yahoo.com">or email</a>
 </body>
 
 </html>
