Mini Guides: Wording

--- a/index.html
+++ b/index.html
@@ -545,8 +545,8 @@
                       <!-- [Infusion-Phys] -->
                       <td style="padding:0"><table class="DG-Hidden-Table">
                         <tr><td><strong>Accuracy/Crit</strong></td><td>Ag+10, Lu+10, St+5</td></tr>
-                        <tr><td><strong>Damage</strong></td><td>St+10, Rest in Ag/Lu</td></tr>
-                        <tr><td><strong>Intimidating Stance</strong></td><td>St+10, Rest in Lu/Vi</td></tr>
+                        <tr><td><strong>Damage</strong></td><td>St+10, Rest Ag/Lu</td></tr>
+                        <tr><td><strong>Intimidating Stance</strong></td><td>St+10, Rest Lu/Vi</td></tr>
                       </table></td>
                       <!-- [Infusion-Spell] -->
                       <td style="padding:0"><table class="DG-Hidden-Table">
@@ -559,7 +559,7 @@
                         <tr><td><strong>Tank</strong></td><td>Vi+10, Lu+10, St/Ma (Defence)</td></tr>
                         <tr><td><strong>Ailments</strong></td><td>Lu+10, Ag+10, Vi+5</td></tr>
                         <tr><td><strong>Buffs/Debuffs</strong></td><td>Vi+10, Lu+10, Ag+5</td></tr>
-                        <tr><td><strong>Healer</strong></td><td>Ma+10, Vi+10, Rest in Ag/Lu</td></tr>
+                        <tr><td><strong>Healer</strong></td><td>Ma+10, Vi+10, Rest Ag/Lu</td></tr>
                       </table></td>
                     </tr>
                   </table></div>
