Demon Guide: Added link to Wiki in introduction

--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
                   <li>There may be people who have better opinions than mine as I don't have that many 5★ demons.</li>
                   <li>For Gacha demons, i'll go over their gacha skills as the only way to obtain them is via pulling</li>
                   <li>Standard 5★s are analyzed on the basis of the archetype skill only, for when you want to fuse them/switch archetype</li>
+                  <li>Stats of demons can be found on the Wiki's <a href="https://dx2wiki.com/index.php/Demon_List" target="_blank">Demon Compendium</a> page. 
+                      If you can't find a specific demon, search up it's name in searchbar.
+                  </li>
                 </ul>
                 
                 <p><strong>4★ (and below) demons</strong></p>
@@ -360,6 +363,7 @@
                 <div class="DG-Demon"><br>
                   <strong>[30/1]</strong>
                   <ul>
+                    <li>Introduction: Added link to Wiki</li>
                     <li>Demon Updates: Orcus(Skills), Lakshmi(Archetype,Skills), Masakado(Archetype)</li>
                     <li>Mini Guides: Added Infusion section</li>
                   </ul>
