Demon Guide: Added tier list, wording changes

--- a/index.html
+++ b/index.html
@@ -324,6 +324,9 @@
                   <li>Stats of demons can be found on the Wiki's <a href="https://dx2wiki.com/index.php/Demon_List" target="_blank">Demon Compendium</a> page. 
                       If you can't find a specific demon, search up it's name in searchbar.
                   </li>
+                  <li>There is also a <a href="https://docs.google.com/spreadsheets/d/1HIRnmiMTBQe-5IlMauIYfB4AnnNrXf5mKkXEI148CHc/edit#gid=1479064456" target="_blank">Tier List</a> made by one of our mods. Their 
+                    thoughts would vary from mine, but most of it is the same.
+                  </li>
                 </ul>
                 
                 <p><strong>4★ (and below) demons</strong></p>
@@ -497,7 +500,7 @@
                 <!-- [Infusion] -->
                 <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Infusion</button>
                 <div class="DG-Demon"><br>
-                  <p>A feature that allows players to increase the base stats of a demon, it is unlocked and added to the Pandemonium when you <strong>clear Chapter 5</strong> of the story.
+                  <p>A feature that allows players to increase the base stats of a demon that is unlocked and added to the Pandemonium when you <strong>clear Chapter 5</strong> of the story.
                     <br>Infusion is done via either sacrificing <strong>Mitamas</strong> or using an item called <strong>Mitama Extract</strong>, each boosting stats to a varying degree depending on the type.
                     <br>Mitamas can be found in Aura Gate Floors 41-50 (recruitable) and upon defeat can drop 2 Mitama Extracts.
                   </p>
@@ -568,7 +571,7 @@
                     </tr>
                   </table></div>
                   <br><p><strong>Undoing Infusions</strong></p>
-                  <p>In case you want to remove stats gained through Infusion, the <strong>Purge</strong> feature can do so (also found in Pandemonium). To purge a demon, you need to purchase the <strong>Purge Extract</strong> 
+                  <p>In case you want to remove stats gained through Infusion, the <strong>Purge</strong> feature can do so (also found in the Pandemonium). To purge a demon, you need to purchase the <strong>Purge Extract</strong> 
                     which can be purchased in the Black Market (accessed from Hideout). [To update upon release] It is unknown regarding the degree of freedom with purging, if it simply removes all stat points or allows you 
                     to pick and choose. It is highly likely you don't get the Mitamas/Extracts invested back upon purging.
                   </p>
@@ -1412,7 +1415,7 @@
                   <button id="Masakado" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Masakado</button>
                   <div class="DG-Demon"><br>
                     <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Masakado')">Demon Information</a></strong></p>
-                    <p>One of the most OP demons in the game, hats off to you if you've obtained him. He has no weaknesses: Null Phys, Resist Light, Drain Dark (He can't be killed by Alice), 
+                    <p>One of the most OP demons in the game, hats off to you if you've obtained him. He has no weaknesses: Null Phys, Resist Light, Drains Dark (He can't be killed by Alice), 
                        the highest strength in the game and really high luck (meaning he can easily crit, have high innate ailment resistance and infliction) and a really powerful 
                        base kit. Vorpal Blade for phys aoe, Warlord's Wrath: Granting phys pierce, 100% phys counter and Intimidating Stance all in one passive and Occult Flash: Single 
                        target phys damage with 50% crit, 200 power and 100% kill rate. Yup even if you have Tetraja on your demon, odds are they'll die anyways from the heavy damage and crit (even has three uses). 
@@ -2740,7 +2743,7 @@
                           </tr>
                           <tr><td class="DG-PSY">Psychic</td>
                               <td><strong>Auto-Tarunda</strong> can be viable for him if you intend to run him as a dodge build. This is heavily rng though as 
-                                  enemies can stack accuracy % and land aoes on your team.</td>
+                                  enemies can stack accuracy % and land aoes on your team. You'd need a lot more investment compared to Teal.</td>
                               <td>Usable</td>
                           </tr>
                           <tr><td class="DG-ELE">Elementalist</td>
