Demon Guide: fixed Tier List link

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                   <li>Stats of demons can be found on the Wiki's <a href="https://dx2wiki.com/index.php/Demon_List" target="_blank">Demon Compendium</a> page. 
                       If you can't find a specific demon, search up it's name in searchbar.
                   </li>
-                  <li>There is also a <a href="https://docs.google.com/spreadsheets/d/1HIRnmiMTBQe-5IlMauIYfB4AnnNrXf5mKkXEI148CHc/edit#gid=1479064456" target="_blank">Tier List</a> made by one of our mods. Their 
+                  <li>There is also a <a href="https://docs.google.com/spreadsheets/d/1HIRnmiMTBQe-5IlMauIYfB4AnnNrXf5mKkXEI148CHc/edit#gid=0" target="_blank">Tier List</a> made by one of our mods. Their 
                     thoughts would vary from mine, but most of it is the same.
                   </li>
                 </ul>
