Added Mitama Images, Demon Guide update

--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
                   <li>There may be people who have better opinions than mine as I don't have that many 5★ demons.</li>
                   <li>For Gacha demons, i'll go over their gacha skills as the only way to obtain them is via pulling</li>
                   <li>Standard 5★s are analyzed on the basis of the archetype skill only, for when you want to fuse them/switch archetype</li>
-                  <li>Stats of demons can be found on the Wiki's <a href="https://dx2wiki.com/index.php/Demon_List" target="_blank">Demon Compendium</a> page. 
+                  <li>Stats of demons can be found on the Wiki's <strong><a href="https://dx2wiki.com/index.php/Demon_List" target="_blank">Demon Compendium</a></strong> page. 
                       If you can't find a specific demon, search up it's name in searchbar.
                   </li>
-                  <li>There is also a <a href="https://docs.google.com/spreadsheets/d/1HIRnmiMTBQe-5IlMauIYfB4AnnNrXf5mKkXEI148CHc/edit#gid=0" target="_blank">Tier List</a> made by one of our mods. Their 
+                  <li>There is also a <strong><a href="https://docs.google.com/spreadsheets/d/1HIRnmiMTBQe-5IlMauIYfB4AnnNrXf5mKkXEI148CHc/edit#gid=0" target="_blank">Tier List</a></strong> made by one of our mods. Their 
                     thoughts would vary from mine, but most of it is the same.
                   </li>
                 </ul>
@@ -366,7 +366,12 @@
                 <div class="DG-Demon"><br>
                   <strong>[30/1]</strong>
                   <ul>
-                    <li>Introduction: Added link to Wiki</li>
+                    <li>Demon Updates: Loki (Fixed Yellow Archetype)</li>
+                    <li>Mini Guides: Updated Infusion Guide</li>
+                  </ul>
+                  <strong>[30/1]</strong>
+                  <ul>
+                    <li>Introduction: Added link to Wiki, Tier List</li>
                     <li>Demon Updates: Orcus(Skills), Lakshmi(Archetype,Skills), Masakado(Archetype)</li>
                     <li>Mini Guides: Added Infusion section</li>
                   </ul>
@@ -501,12 +506,12 @@
                 <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Infusion</button>
                 <div class="DG-Demon"><br>
                   <p>A feature that allows players to increase the base stats of a demon that is unlocked and added to the Pandemonium when you <strong>clear Chapter 5</strong> of the story.
-                    <br>Infusion is done via either sacrificing <strong>Mitamas</strong> or using an item called <strong>Mitama Extract</strong>, each boosting stats to a varying degree depending on the type.
-                    <br>Mitamas can be found in Aura Gate Floors 41-50 (recruitable) and upon defeat can drop 2 Mitama Extracts.
+                    <br>Infusion is done via either sacrificing <strong>Mitamas</strong> or using an item called <strong>Mitama Extract</strong>(5 variations, based on primary stats), each boosting stats to a varying degree depending on the type.
+                    <br>Mitamas can be found in Aura Gate Floors 41-50 (recruitable as a Rare Encounter) and upon defeat can drop Mitama Extracts.
                   </p>
                   <p><strong>Sacrificing Mitamas/Using Extracts</strong></p>
                   <p>As like sacrificing demons for skill points/evolve materials, mitama are used up for Infusion, with using extracts you have to use 5 at a time in order to boost up a stat.</p>
-                  <div class="DG-Table"><table>
+                  <div class="DG-Table"><table class="DG-ToC">
                     <tr>
                       <td class="DG-Table-Label">Extract Type</td>
                       <td class="DG-ARA">St x5</td><td class="DG-ELE">Ma x5</td><td class="DG-PSY">Vi x5</td><td class="DG-PRO">Ag x5</td><td class="DG-CMN">Lu x5</td>
@@ -517,7 +522,7 @@
                     </tr>
                     <tr>
                       <td class="DG-Table-Label">Mitama</td>
-                      <td class="DG-ARA">Ara (Image)</td><td class="DG-ELE">Nigi (Image)</td><td class="DG-PSY">Kusi (Image)</td><td class="DG-PRO">Saki (Image)</td>
+                      <td><img src="images/devil/Ara.png"></td><td><img src="images/devil/Nigi.png"></td><td><img src="images/devil/Kusi.png"></td><td><img src="images/devil/Saki.png"></td>
                     </tr>
                     <tr>
                       <td class="DG-Table-Label">Stats</td>
@@ -526,12 +531,12 @@
                   </table></div>
                   
                   <br><p><strong>Stat caps and limits</strong></p>
-                  <p>Each stat has a cap of a +10 bonus and depending on the rarity of the demon there is also a limit for the total amount of stat points that can be boosted. You have to decide carefully when investing 
-                    in 5★ demons as you can't simply boost every stat by 10.
+                  <p>Each stat has a cap of a +10 bonus and depending on the rarity of the demon there is also a limit for the total amount of stat points that can be boosted. 1★ demons can be boosted in every stat to 10 (limit of 50) and 
+                  as you go higher this limit decreases restricting the amount of points you can allocate. Choose wisely when it comes to investing specifically in 4/5★ demons
                   </p>
                   <div class="DG-Table"><table>
-                    <tr><td class="DG-Table-Label">Rarity</td><td>★</td><td>★★</td><td>★★★</td><td>★★★★</td><td>★★★★★</td></tr>
-                    <tr><td class="DG-Table-Label">Limit</td><td>?</td><td>?</td><td>?</td><td>?</td><td>25</td></tr>
+                    <tr><td class="DG-Table-Label">Rarity</td><td>1★</td><td>2★</td><td>3★</td><td>4★</td><td>5★</td></tr>
+                    <tr><td class="DG-Table-Label">Limit</td><td>50</td><td>40</td><td>30</td><td>25</td><td>25</td></tr>
                   </table></div>
                   <br>
                   <p><strong>Sample builds</strong></p>
@@ -543,7 +548,7 @@
                   <br> Below are some sample stat spreads, you can follow it if you wish or go with whatever you like.
                   </p>
                   <div class="DG-Table"><table>
-                    <tr><td class="DG-Table-Label">Builds<br>(5★ only)</td>
+                    <tr><td class="DG-Table-Label">4/5★ Builds</td>
                         <td class="DG-Table-Label">Phys</td>
                         <td class="DG-Table-Label">Spell</td>
                         <td class="DG-Table-Label">Support</td>
@@ -571,9 +576,8 @@
                     </tr>
                   </table></div>
                   <br><p><strong>Undoing Infusions</strong></p>
-                  <p>In case you want to remove stats gained through Infusion, the <strong>Purge</strong> feature can do so (also found in the Pandemonium). To purge a demon, you need to purchase the <strong>Purge Extract</strong> 
-                    which can be purchased in the Black Market (accessed from Hideout). [To update upon release] It is unknown regarding the degree of freedom with purging, if it simply removes all stat points or allows you 
-                    to pick and choose. It is highly likely you don't get the Mitamas/Extracts invested back upon purging.
+                  <p>In case you want to remove stats gained through Infusion, the <strong>Purge</strong> feature can do so (also found in the Pandemonium). To purge a demon, you need to purchase the relevant <strong>Purge Extract</strong> 
+                    which can be purchased in the Black Market (accessed from Hideout). For example a Ag Purge Extract would remove 1 infused Ag point, St Purge Extract for St point, etc.
                   </p>
                 </div>
               </b-card>
@@ -3653,8 +3657,8 @@
                             <td><strong>Best<br>(Coverage)</strong></td>
                           </tr>
                           <tr><td class="DG-PRO">Protector</td>
-                            <td>He has pretty good luck, but his main forte is not in ailment slinging with <strong>Vengeance</strong> (It's not that great anyways) instead being in single target spell damage</td>
-                            <td>Bad</td>
+                            <td><strong>Mind Blast</strong> can lend him into a more supportive role. It cannot activate his passive though, so this is mainly for pvp uses in draining dangerous foes of mana.</td>
+                            <td>Usable</td>
                           </tr>
                           <tr><td class="DG-PSY">Psychic</td>
                             <td>-</td>
