--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                     </tr>
                   </table></div>
                   <br><p><strong>Undoing Infusions</strong></p>
-                  <p>In case you want to remove stats gained through Infusion, the <strong>Purge</strong> feature can do so (also found in the Pandemonium). To purge a demon, you need to purchase the relevant <strong>Purge Extract</strong> 
+                  <p>In case you want to remove stats gained through Infusion, the <strong>Purge</strong> feature can do so (also found in the Pandemonium). To purge a demon, you need to use the relevant <strong>Purge Extract</strong> 
                     which can be purchased in the Black Market (accessed from Hideout). For example a Ag Purge Extract would remove 1 infused Ag point, St Purge Extract for St point, etc.
                   </p>
                 </div>
