Updated Image names for mitamas

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                     </tr>
                     <tr>
                       <td class="DG-Table-Label">Mitama</td>
-                      <td><img src="images/devil/Ara.png"></td><td><img src="images/devil/Nigi.png"></td><td><img src="images/devil/Kusi.png"></td><td><img src="images/devil/Saki.png"></td>
+                      <td><img src="images/devil/AraMitama.png"></td><td><img src="images/devil/NigiMitama.png"></td><td><img src="images/devil/KusiMitama.png"></td><td><img src="images/devil/SakiMitama.png"></td>
                     </tr>
                     <tr>
                       <td class="DG-Table-Label">Stats</td>
